@startuml
' Editable source reconstructed from the exported PDF and aligned with the current backend code.
' Open with any PlantUML-compatible editor/extension and export to PDF/SVG/PNG as needed.

title Exercise: Class Diagram

top to bottom direction
skinparam shadowing false
skinparam packageStyle rectangle
skinparam BackgroundColor white
skinparam ArrowColor #8F8F8F
skinparam ClassBorderColor #9C8AE0
skinparam ClassBackgroundColor #ECE8FF
skinparam ClassFontColor #2F2F2F
skinparam PackageBorderColor #D9CF80
skinparam PackageBackgroundColor #FFF9D6
skinparam PackageFontColor #6A6A6A
skinparam NoteBorderColor #BDBDBD
skinparam NoteBackgroundColor #FFFFFF
skinparam stereotypeCBackgroundColor #ECE8FF
skinparam stereotypeCBorderColor #9C8AE0
hide empty members
hide circle

package "REST controllers" as REST {
  class StudentDashboardController <<RestController>> {
    +getDashboard()
    +getHistory()
  }

  class AuthController <<RestController>> {
    +signup(request)
    +signin(request)
    +me()
  }

  class CourseController <<RestController>> {
    +getCourses()
    +getCourse(id)
    +createCourse(course)
    +updateCourse(course)
    +deleteCourse(id)
  }

  class LectureController <<RestController>> {
    +getLectures(courseId?)
    +getLecture(id)
    +createLecture(lecture)
    +updateLecture(id, lecture)
    +deleteLecture(id)
  }

  class EnrollmentController <<RestController>> {
    +uploadEnrollments(courseId, file)
    +getCourseEnrollments(courseId)
    +deleteEnrollments(courseId)
    +updateEnrollments(courseId, studentInfo)
    +deleteOneEnrollment(courseId, userId)
  }

  class AttendanceController <<RestController>> {
    +markAttendance(joinCode)
    +getPresentStudents(lectureId)
  }
}

package "Domain" as Domain {
  class User <<Entity>> {
    -id : Long
    -role : UserRole
    -firstName : String
    -lastName : String
    -email : String
    -passwordHash : String
    -preferredLocale : String
  }

  enum UserRole {
    TEACHER
    STUDENT
  }

  class Course <<Entity>> {
    -id : Long
    -courseName : String
    -description : String
    -teacherId : Long
    -defaultLocale : String
    -instructionLanguage : String
  }

  class CourseTranslation <<Entity>> {
    -courseId : Long
    -locale : String
    -courseName : String
    -description : String
  }

  class CourseTranslationId {
    -courseId : Long
    -locale : String
  }

  class Lecture <<Entity>> {
    -id : Long
    -courseId : Long
    -joinCode : String
    -description : String
    -startDate : Timestamp
    -endDate : Timestamp
  }

  class Enrollment <<Entity>> {
    -id : EnrollmentId
    -user : User
  }

  class EnrollmentId <<Embeddable>> {
    -userId : Long
    -courseId : Long
  }

  class Attendance <<Entity>> {
    -attendanceId : AttendanceId
    -scannedAt : Timestamp
  }

  class AttendanceId <<Embeddable>> {
    -userId : Long
    -lectureId : Long
  }
}

User --> UserRole : role
Course --> User : teacherId
Lecture --> Course : courseId

Enrollment *-- EnrollmentId : id
Enrollment --> User : user
Enrollment ..> Course : courseId

Attendance *-- AttendanceId : attendanceId
Attendance ..> User : userId
Attendance ..> Lecture : lectureId

CourseTranslation ..> CourseTranslationId : PK
CourseTranslation --> Course : courseId

AuthController ..> User
CourseController ..> Course
CourseController ..> CourseTranslation
LectureController ..> Lecture
EnrollmentController ..> Enrollment
AttendanceController ..> Attendance
AttendanceController ..> Lecture
StudentDashboardController ..> User
StudentDashboardController ..> Course
StudentDashboardController ..> Lecture
StudentDashboardController ..> Attendance

note right of Course
  courseName and description are resolved
  localized values used in API requests/responses.
  Persistent localized content is stored
  in CourseTranslation.
end note

note right of User
  preferredLocale was added after the PDF version
  to support localized API content.
end note

note bottom of CourseTranslation
  Composite key: (courseId, locale)
end note

@enduml
